Wed Aug  4 08:41:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/ImplRepo_Service/Locator_Repository.cpp:
          Fixed compile errors

Tue Aug  3 14:48:42 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/Environment.cpp:

          Added Id string.

        * tao/Object.inl:
        * tao/Valuetype/AbstractBase.inl:

          Replace 'inline' with 'ACE_INLINE'.

        * TAO_IDL/be/be_visitor_argument/argument.cpp:

          Added missing final newline.

Tue Aug  3 14:17:23 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/Exposed_Policies/Policy_Verifier.cpp:
          Fixed memory leaks.

Tue Aug  3 13:59:58 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_component/any_op_ch.cpp:
        * TAO_IDL/be/be_visitor_component/any_op_cs.cpp:
        * TAO_IDL/be/be_visitor_component/component_ch.cpp:
        * TAO_IDL/be/be_visitor_component/component_ci.cpp:
        * TAO_IDL/be/be_visitor_component/cdr_op_ch.cpp:
        * TAO_IDL/be/be_visitor_component/component_cs.cpp:
        * TAO_IDL/be/be_visitor_component/cdr_op_cs.cpp:
        * TAO_IDL/be_include/be_visitor_component/cdr_op_cs.h:
        * TAO_IDL/be_include/be_visitor_component/any_op_ch.h:
        * TAO_IDL/be_include/be_visitor_component/any_op_cs.h:
        * TAO_IDL/be_include/be_visitor_component/component_ch.h:
        * TAO_IDL/be_include/be_visitor_component/component_ci.h:
        * TAO_IDL/be_include/be_visitor_component/cdr_op_ch.h:
        * TAO_IDL/be_include/be_visitor_component/component_cs.h:

          Removed these files, the contained visitors are now
          replaced in the traversal by the corresponding interface
          visitor.

        * TAO_IDL/be/be_visitor_exception/exception_ch.cpp:
        * TAO_IDL/be/be_visitor_typecode/typecode_decl.cpp:
        * TAO_IDL/be/be_visitor_argument/invoke_cs.cpp:
        * TAO_IDL/be/be_visitor_argument/argument.cpp: